# cortex-tutor

./: .env.example  .gitignore  Dockerfile  Dockerfile.migrate  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-push-promote.yml  ci.yml
api/: tutor-openapi.yaml
docs/adr/: 0001-fastapi-python-tutor-service.md
evals/: README.md  extract.py  gate_runner.py  schema.py
evals/baselines/: haiku-two-sum-pilot.json
evals/datasets/: two_sum_evidence.jsonl  two_sum_pilot.jsonl  two_sum_probes.jsonl
grounding_mcp/: config.py  corpus.py  search.py  server.py  slug.py  tools.py
migrations/: db.changelog-master.yaml  liquibase.properties
migrations/changes/: 0001-tutor-schema.sql  0002-gate-call.sql  0003-byok-judge-kind.sql  0004-message-model.sql  0005-session-user-index.sql  0006-conceptual-track.sql  0007-conceptual-track-gate-call.sql
tests/: conftest.py  test_app.py  test_byok.py  test_catalog.py  test_coach.py  test_corpus.py  test_fsm.py  test_gate.py  test_gate_runner.py  test_grounding_context.py  test_grounding_server.py  test_grounding_tools.py  test_quotas.py  test_ratelimit.py  test_skill_loader.py  test_slug_parity.py  test_turn_integration.py
tutor/: app.py  auth.py  config.py  contract_models.py  quotas.py  ratelimit.py
tutor/domain/: fsm.py  steps.py  verdict.py
tutor/grounding/: context.py  mcp_client.py
tutor/models/: anthropic_provider.py  base.py  catalog.py  factory.py  ollama_provider.py  router.py
tutor/orchestration/: byok.py  coach.py  gate.py  turn.py
tutor/persistence/: db.py  models.py  (+2 more)
(+18 files in other folders)
