[project]
name = "cortex-tutor"
version = "0.1.0"
description = "Cortex 'Your Turn' — a stateful Socratic interview-coaching agent (FastAPI + Postgres FSM + Claude + MCP grounding)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Aniket Kakde" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "anthropic>=0.39",
    "mcp>=1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "tenacity>=8.5",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "datamodel-code-generator>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutor", "grounding_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["tutor", "grounding_mcp", "tests", "evals"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, async, ruff-specific
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
